--- a/TobotApp/src/main/res/values/strings.xml
+++ b/TobotApp/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">瞳步建图</string>
     <string name="ip_chassis">192.168.11.1</string>
     <string name="ip_socket">192.168.11.3</string>
-    <string name="tv_sta_tips">请先连接到底盘连接的无线网络</string>
+    <string name="tv_chassis_connect_tips">请先连接到底盘连接的无线网络</string>
     <string name="et_ip_hint_tips">请输入底盘的ip地址</string>
     <string name="btn_connect">连接</string>
     <string name="tv_connect_history">连接历史记录</string>
@@ -16,7 +16,6 @@
     <string name="tv_test">测试</string>
     <string name="tv_about_app">关于APP</string>
     <string name="tv_set_speed">导航速度</string>
-    <string name="tv_current_speed_tips">最大运动速度%.2fM/S</string>
     <string name="speed_low">低速</string>
     <string name="speed_medium">中速</string>
     <string name="speed_high">高速</string>
@@ -95,9 +94,7 @@
     <string name="map_name_empty_tips">地图名称不能为空，请输入…</string>
     <string name="slam_connect_not_tips">抱歉，还没连接到底盘</string>
     <string name="tv_title_save_map">保存地图</string>
-    <string name="tv_title_edit_map">重命名地图</string>
     <string name="et_hint_map_tips">请输入地图名称</string>
-    <string name="et_hint_edit_map_tips">请输入新的地图名称</string>
     <string name="et_hint_location_tips">请输入位置点名称</string>
     <string name="et_hint_edit_location_tips">请输入位置点名称（必填）</string>
     <string name="et_hint_edit_location_china_tips">请输入中文名称（选填）</string>
@@ -111,7 +108,6 @@
     <string name="name_rule_tips">请按需求合理命名位置点名称，建议以数字类型命名。</string>
     <string name="name_edit_rule_tips">位置点名称、中英文名称均可修改，但不能重复！标定点用来设置机器人当前位置，重定位用于当前位置点执行定位操作。</string>
     <string name="map_rule_tips">请按需求合理命名地图名称，当保存的地图名称与现有地图名称一致时，将会覆盖保存。</string>
-    <string name="map_edit_rule_tips">请按需求合理命名地图名称，当保存的地图名称与现有地图名称一致时，将会覆盖保存。</string>
     <string name="map_load_tips">地图加载中…</string>
     <string name="map_load_fail_tips">地图加载失败…</string>
     <string name="map_load_success_tips">地图加载成功…</string>
@@ -121,9 +117,6 @@
     <string name="map_save_tips">地图保存中…</string>
     <string name="map_save_success_tips">地图保存成功…</string>
     <string name="map_save_fail_tips">地图保存失败…</string>
-    <string name="map_edit_success_tips">地图修改成功…</string>
-    <string name="map_edit_fail_tips">地图修改失败…</string>
-    <string name="map_exist_tips">该地图名称已存在，请重新命名…</string>
     <string name="number_edit_fail_tips">该位置点名称已存在，请重新命名…</string>
     <string name="name_china_edit_fail_tips">该中文名称已存在，请重新命名…</string>
     <string name="name_english_edit_fail_tips">该英文名称已存在，请重新命名…</string>
@@ -185,7 +178,7 @@
     <string name="task_empty_tips">任务名称不能为空…</string>
     <string name="task_name_exist_tips">路径名称已存在，请重新命名…</string>
     <string name="tv_execute_task_tips">请确认任务是否匹配当前地图（点击执行，长按删除）</string>
-    <string name="tv_task_point">%1$s[%2$s]</string>
+    <string name="tv_task_point">%1$s(%2$s)</string>
     <string name="tv_implement_count">循环次数：%1$d</string>
     <string name="tv_task_point_tips">运动轨迹\n%1$s</string>
     <string name="tv_charge_switch">添加回桩充电</string>
@@ -263,11 +256,11 @@
     <string name="tv_charge_start_distance">充电时对桩检测距离：%1$sM</string>
     <string name="et_charge_start_distance_hint">请输入检测距离(单位:米)</string>
     <string name="charge_distance_empty_tips">检测距离不能为空，请输入…</string>
-    <string name="tv_charge_start_distance_tips">对桩检测距离是指激光雷达到桩的距离。如果在充电桩前0.2米开始检测对桩，底盘半径为0.25米，则检测距离为0.45米。</string>
+    <string name="tv_charge_start_distance_tips">对桩检测距离是指激光雷达到桩的距离。如果在充电桩前0.2米开始检测对桩，底盘半径为0.25米，则检测距离为0.45米（如果值为0则不检测）。</string>
     <string name="tv_charge_offset">充电时对桩偏移值：%1$sM</string>
     <string name="et_charge_offset_hint">请输入对桩偏移值(单位:米)</string>
     <string name="charge_offset_empty_tips">偏移值不能为空，请输入…</string>
-    <string name="tv_charge_offset_tips">当充电后退对桩时，如果大于设定的偏移值时，将会继续尝试，尝试一定次数后将停止，并返回充电失败的结果。</string>
+    <string name="tv_charge_offset_tips">当充电后退对桩时，如果大于设定的偏移值时，将会继续尝试，尝试一定次数后将停止，并返回充电失败的结果（如果值为0则不检测）。</string>
     <string name="set_pose_tips">标定中…</string>
     <string name="btn_close_sensor">关闭传感器</string>
     <string name="all">全部</string>
