--- a/TobotApp/src/main/res/values/strings.xml
+++ b/TobotApp/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="tv_version_update">版本更新</string>
     <string name="tv_robot">瞳步机器人</string>
     <string name="tv_scan_follow">扫码关注微信公众号</string>
-    <string name="tv_info">电话：13371936025\n邮箱：sales@tobotai.com\n网址：www.tobotai.com\n地址：上海市静安区海宁路899号长泰企业天地广场A座11楼</string>
+    <string name="tv_info">电话：13371936025\n邮箱：sales@tobotai.com\n网址：www.tobotai.com\n地址：上海市浦东新区纳贤路800号A座9楼909</string>
     <string name="tv_stop">停止</string>
     <string name="tv_task">任务</string>
     <string name="tv_navigate">导航</string>
