--- a/TobotApp/src/main/res/values-en-rUS/strings.xml
+++ b/TobotApp/src/main/res/values-en-rUS/strings.xml
@@ -40,7 +40,7 @@
     <string name="tv_version_update">version update</string>
     <string name="tv_robot">TongBu robot</string>
     <string name="tv_scan_follow">Scan code concerns WeChat \nofficial account</string>
-    <string name="tv_info">tel:13371936025\nemail:sales@tobotai.com\nwebsite:www.tobotai.com\naddress:11/F,block a,Changtai enterprise Plaza,No.899,Haining Road,JingAn District,Shanghai</string>
+    <string name="tv_info">tel:13371936025\nemail:sales@tobotai.com\nwebsite:www.tobotai.com\naddress:Room 909,9th Floor,Block A,No.800 Naxian Road,Pudong New Area,Shanghai</string>
     <string name="tv_stop">stop</string>
     <string name="tv_task">task</string>
     <string name="tv_navigate">navigate</string>
