--- a/TobotApp/src/main/res/values-zh-rHK/strings.xml
+++ b/TobotApp/src/main/res/values-zh-rHK/strings.xml
@@ -30,7 +30,7 @@
     <string name="tv_contact_us">聯系我們</string>
     <string name="tv_robot">瞳步機器人</string>
     <string name="tv_scan_follow">掃碼關註微信公眾號</string>
-    <string name="tv_info">電話：13371936025\n郵箱：sales@tobotai.com\n網址：www.tobotai.com\n地址：上海市靜安區海寧路899號長泰企業天地廣場A座11樓</string>
+    <string name="tv_info">電話：13371936025\n郵箱：sales@tobotai.com\n網址：www.tobotai.com\n地址：上海市浦東新區納賢路800號A座9樓909</string>
     <string name="tv_task">任務</string>
     <string name="tv_navigate">導航</string>
     <string name="tv_status_show">定位質量[%1$d]，充電狀態[%2$s]，電量[%3$d]，運動狀態[%4$s]</string>
