--- a/TobotApp/src/main/res/values/strings.xml
+++ b/TobotApp/src/main/res/values/strings.xml
@@ -1,14 +1,16 @@
 <resources>
     <string name="app_name">瞳步建图</string>
     <string name="ip_chassis">192.168.11.1</string>
-    <string name="tv_chassis_connect_tips">请先连接到底盘连接的无线网络</string>
+    <string name="tv_wifi">WIFI：%1$s</string>
+    <string name="tv_ip">IP</string>
     <string name="et_ip_hint_tips">请输入底盘的ip地址</string>
+    <string name="tv_chassis_connect_tips">请先连接到底盘连接的无线网络</string>
     <string name="btn_connect">连接</string>
     <string name="tv_connect_history">连接历史记录</string>
     <string name="delete_success">删除成功…</string>
-    <string name="ip_empty_tips">ip地址不能为空，请输入…</string>
-    <string name="tv_connect_ing">连接中…</string>
-    <string name="tv_reconnect_ing">重连中…</string>
+    <string name="ip_empty_tips">ip地址不能为空…</string>
+    <string name="connect_ing">连接中…</string>
+    <string name="reconnect_ing">重连中…</string>
     <string name="reconnect_success">重连成功…</string>
     <string name="tv_device_info">设备信息</string>
     <string name="tv_config">配置</string>
@@ -21,7 +23,7 @@
     <string name="speed_medium">中速</string>
     <string name="speed_high">高速</string>
     <string name="tv_rotate_speed">旋转角速度</string>
-    <string name="tv_current_rotate_speed_tips">最大旋转角速度%.2fM/S</string>
+    <string name="tv_current_rotate_speed_tips">最大旋转角速度%.1fM/S</string>
     <string name="tv_navigate_option">导航选项</string>
     <string name="navigate_mode">导航模式</string>
     <string name="navigate_free">自由导航</string>
@@ -48,11 +50,13 @@
     <string name="tv_version_update">版本更新</string>
     <string name="tv_robot">瞳步机器人</string>
     <string name="tv_scan_follow">扫码关注微信公众号</string>
-    <string name="tv_info">电话：13371936025\n邮箱：sales@tobotai.com\n网址：www.tobotai.com\n地址：上海市浦东新区纳贤路800号A座9楼909</string>
+    <string name="tv_info">电话：13371936025\n邮箱：sales@tobotai.com\n网址：www.tobotai.com\n地址：上海市奉贤区金海公路6055号临港南桥科技城29号楼506室</string>
     <string name="tv_stop">停止</string>
     <string name="tv_task">任务</string>
     <string name="tv_navigate">导航</string>
-    <string name="tv_status_show">定位质量[%1$d]，充电状态[%2$s]%3$s，电量[%4$d]，运动状态[%5$s]</string>
+    <string name="tv_status_show">建图状态[%1$s]，定位质量[%2$d]，充电状态[%3$s]%4$s，电量[%5$d]，运动状态[%6$s]</string>
+    <string name="mapping_true">开</string>
+    <string name="mapping_false">关</string>
     <string name="tv_charge_true">充电中</string>
     <string name="tv_charge_false">未充电</string>
     <string name="charging_docking">-[在桩]</string>
@@ -64,16 +68,20 @@
     <string name="tv_go_charge">充电</string>
     <string name="tv_edit">编辑</string>
     <string name="tv_reset_charge">重置充电桩</string>
-    <string name="tv_relocation">重定位</string>
+    <string name="tv_relocate">重定位</string>
     <string name="tv_clear_map">清除地图</string>
     <string name="tv_save_map">保存地图</string>
     <string name="tv_build_map">建图</string>
     <string name="tv_virtual_wall">虚拟墙</string>
-    <string name="tv_virtual_track">虚拟轨道</string>
+    <string name="tv_virtual_track">虚拟\n轨道</string>
     <string name="tv_rubber">橡皮擦</string>
-    <string name="emergency_stop_tips">急停按钮被按…</string>
-    <string name="break_stop_tips">刹车按钮被按…</string>
-    <string name="direct_charge_to_navigate_tips">正在直充…</string>
+    <string name="emergency_stop_tips">急停按钮被按</string>
+    <string name="break_stop_tips">刹车按钮被按</string>
+    <string name="direct_charge_to_navigate_tips">正在直充</string>
+    <string name="control_bus_disconnect">ControlBusDisconnect</string>
+    <string name="low_battery">低电</string>
+    <string name="motor_error">电机异常</string>
+    <string name="battery_communicate_error">电池通信异常</string>
     <string name="btn_add_current_point">添加当前位置点</string>
     <string name="btn_sort_point">按编号排序</string>
     <string name="btn_edit">编辑</string>
@@ -85,21 +93,21 @@
     <string name="navigate_result">导航结果：%1$b</string>
     <string name="rotate_result">旋转结果：%1$b</string>
     <string name="move_recover_quality_low_tips">当前定位质量小于%1$d，无法正常导航，建议手动停止。请将机器移动至特征点明显的地方进行重定位操作。</string>
-    <string name="relocation_map_tips">定位中…</string>
-    <string name="relocation_map_with_size_tips">定位中…\n%1$s</string>
-    <string name="relocation_map_success">重定位成功…</string>
-    <string name="relocation_map_fail">重定位失败…</string>
+    <string name="relocate_ing">定位中…</string>
+    <string name="relocate_ing_with_size">定位中…\n%1$s</string>
+    <string name="relocate_success">重定位成功…</string>
+    <string name="relocate_fail">重定位失败…</string>
     <string name="tv_map_switch_tips">确认要加载地图吗？加载后将会清除当前的地图！</string>
     <string name="tv_map_delete_tips">确认要删除该地图吗？</string>
     <string name="tv_location_delete_tips">确认要删除该位置点吗？</string>
     <string name="tv_clear_map_tips">确认要清除地图吗？</string>
     <string name="btn_cancel">取消</string>
     <string name="btn_confirm">确认</string>
-    <string name="set_ing_tips">设置中…</string>
-    <string name="set_success_tips">设置成功…</string>
-    <string name="set_fail_tips">设置失败…</string>
-    <string name="name_empty_tips">位置点名称不能为空，请输入…</string>
-    <string name="map_name_empty_tips">地图名称不能为空，请输入…</string>
+    <string name="set_ing">设置中…</string>
+    <string name="set_success">设置成功…</string>
+    <string name="set_fail">设置失败…</string>
+    <string name="name_empty_tips">位置点名称不能为空…</string>
+    <string name="map_name_empty_tips">地图名称不能为空…</string>
     <string name="tv_title_save_map">保存地图</string>
     <string name="et_hint_map_tips">请输入地图名称</string>
     <string name="et_hint_location_tips">请输入位置点名称</string>
@@ -109,21 +117,21 @@
     <string name="btn_update_location">更新点位置</string>
     <string name="tv_mark_location">标定点</string>
     <string name="tv_arrive_not_rotate">到点不旋转</string>
-    <string name="et_relocation_area_width">重定位区域宽(单位:米)</string>
-    <string name="et_relocation_area_height">重定位区域高(单位:米)</string>
-    <string name="tv_relocation_area_tips">当重定位区域宽或高为0时，则默认局部重定位。</string>
+    <string name="et_relocate_area_width">重定位区域宽(单位:米)</string>
+    <string name="et_relocate_area_height">重定位区域高(单位:米)</string>
+    <string name="tv_relocate_area_tips">当重定位区域宽或高为0时，则默认局部重定位。</string>
     <string name="name_rule_tips">请按需求合理命名位置点名称，建议以数字类型命名。</string>
     <string name="name_edit_rule_tips">位置点名称、中英文名称均可修改，但不能重复！重定位用于当前位置点执行定位操作。</string>
     <string name="map_rule_tips">请按需求合理命名地图名称，当保存的地图名称与现有地图名称一致时，将会覆盖保存。</string>
-    <string name="map_load_tips">地图加载中…</string>
-    <string name="map_load_fail_tips">地图加载失败…</string>
-    <string name="map_load_success_tips">地图加载成功…</string>
-    <string name="map_clear_tips">地图清除中…</string>
-    <string name="clear_success_tips">清除成功…</string>
-    <string name="clear_fail_tips">清除失败…</string>
-    <string name="map_save_tips">地图保存中…</string>
-    <string name="map_save_success_tips">地图保存成功…</string>
-    <string name="map_save_fail_tips">地图保存失败…</string>
+    <string name="load_ing">加载中…</string>
+    <string name="load_success">加载成功…</string>
+    <string name="load_fail">加载失败…</string>
+    <string name="clear_ing">清除中…</string>
+    <string name="clear_success">清除成功…</string>
+    <string name="clear_fail">清除失败…</string>
+    <string name="save_ing">保存中…</string>
+    <string name="save_success">保存成功…</string>
+    <string name="save_fail">保存失败…</string>
     <string name="number_edit_fail_tips">该位置点名称已存在，请重新命名…</string>
     <string name="name_china_edit_fail_tips">该中文名称已存在，请重新命名…</string>
     <string name="name_english_edit_fail_tips">该英文名称已存在，请重新命名…</string>
@@ -134,8 +142,8 @@
     <string name="tv_upgrade_tips">检测到新版本，是否更新？</string>
     <string name="tv_ignore">忽略</string>
     <string name="tv_upgrade">更新</string>
-    <string name="tv_check_version_tips">检测中…</string>
-    <string name="download_fail_tips">下载失败…</string>
+    <string name="check_ing">检测中…</string>
+    <string name="download_fail">下载失败…</string>
     <string name="permission_sd_card_open_tips">请先打开内存卡储存权限…</string>
     <string name="tv_apk_download_begin">开始下载</string>
     <string name="tv_apk_download_tips">瞳步建图下载中…</string>
@@ -158,13 +166,13 @@
     <string name="float_format">%.3f</string>
     <string name="tv_file_catalog">文件目录：%1$s</string>
     <string name="tv_back">返回</string>
-    <string name="tv_add_line">添加</string>
+    <string name="tv_add_line">手动\n添加</string>
+    <string name="tv_confirm_line">拖拽\n确认</string>
     <string name="tv_remove_line">移除</string>
     <string name="tv_clear_line">清空</string>
     <string name="tv_wipe_white">擦白</string>
     <string name="tv_wipe_grey">擦灰</string>
     <string name="tv_wipe_black">擦黑</string>
-    <string name="tv_wipe_cancel">取消</string>
     <string name="point_sort_success">排序成功…</string>
     <string name="btn_known">我知道了</string>
     <string name="tv_current_low_battery_tips">最低电量%1$d</string>
@@ -178,10 +186,10 @@
     <string name="to_left">向左</string>
     <string name="to_right">向右</string>
     <string name="btn_send">发送</string>
-    <string name="rotate_speed_empty_tips">旋转角度值不能为空</string>
+    <string name="rotate_speed_empty_tips">旋转角度值不能为空…</string>
     <string name="tv_move_navigate_distance">向前导航</string>
     <string name="et_navigate_distance_hint_tips">请输入导航距离（单位：米）</string>
-    <string name="navigate_distance_empty_tips">导航距离值不能为空</string>
+    <string name="navigate_distance_empty_tips">导航距离值不能为空…</string>
     <string name="tv_save_task">保存任务</string>
     <string name="et_hint_task_tips">请输入任务名称</string>
     <string name="tv_task_tips">任务名称代表所创建任务的标志，不能重复！</string>
@@ -199,13 +207,13 @@
     <string name="signal_2">较强</string>
     <string name="signal_3">一般</string>
     <string name="slam_disconnect_tips">底盘连接断开，请退出当前应用！(%1$s)</string>
-    <string name="operate_error_tips">操作失败…</string>
+    <string name="operate_fail">操作失败…</string>
     <string name="tv_reset_charge_title">重置充电桩</string>
     <string name="tv_reset_charge_tips">步骤如下\n1、将充电桩移至新的位置\n2、将机器导航或推到充电桩上并处于充电状态\n3、点击“重定位”，重定位成功后点击“重置”\n4、将机器从充电桩导航出来，即重置成功</string>
     <string name="btn_reset">重置</string>
     <string name="reset_not_charge_tips">请先将机器移动至充电桩上</string>
-    <string name="reset_success_tips">重置成功…</string>
-    <string name="reset_fail_tips">重置失败…</string>
+    <string name="reset_success">重置成功…</string>
+    <string name="reset_fail">重置失败…</string>
     <string name="sensor_bumper_trigger">防碰撞传感器触发</string>
     <string name="sensor_cliff_trigger">防跌落(#%1$d)传感器触发</string>
     <string name="sensor_sonar">超声波\n%1$s</string>
@@ -255,44 +263,43 @@
     <string name="tv_chassis_radius">底盘半径：%1$sM</string>
     <string name="et_chassis_radius_hint">请输入底盘半径(单位:米)</string>
     <string name="tv_chassis_radius_tips">当重置充电桩时需要減去底盘半径。</string>
-    <string name="chassis_radius_empty_tips">底盘半径不能为空，请输入…</string>
+    <string name="chassis_radius_empty_tips">底盘半径不能为空…</string>
     <string name="btn_set">设置</string>
     <string name="tv_speed_multiplier">倍速（打开后速度翻倍）</string>
     <string name="tv_touch_count">触摸次数：%1$d</string>
     <string name="et_touch_count_hint">请输入触摸次数</string>
-    <string name="touch_count_empty_tips">触摸次数不能为空，请输入…</string>
+    <string name="touch_count_empty_tips">触摸次数不能为空…</string>
     <string name="set_success_and_reenter">设置成功，需重新进入应用…</string>
     <string name="tv_navigate_parameter">运行参数</string>
-    <string name="tv_relocation_quality_min">重定位最低定位质量：%1$d</string>
-    <string name="et_relocation_quality_hint">请输入定位质量(1~100)</string>
-    <string name="tv_relocation_quality_min_tips">导航过程中，当定位质量连续小于该值3次时，将会主动执行重定位操作。</string>
-    <string name="relocation_quality_empty_tips">定位质量不能为空，请输入…</string>
-    <string name="tv_relocation_quality_safe">重定位安全值：%1$d</string>
-    <string name="tv_relocation_quality_safe_tips">当导航重定位失败时，如果定位质量高于该值时，则认为安全，可以继续导航。</string>
-    <string name="tv_relocation_area_radius">重定位区域半径：%1$sM</string>
-    <string name="et_relocation_area_radius_hint">请输入重定位区域半径(单位:米)</string>
-    <string name="tv_relocation_area_radius_tips">当导航重定位时，以当前位置点为中心的区域内进行重定位，为0则全局重定位。</string>
-    <string name="relocation_area_radius_empty_tips">重定位区域半径不能为空，请输入…</string>
+    <string name="tv_relocate_quality_min">重定位最低定位质量：%1$d</string>
+    <string name="et_relocate_quality_hint">请输入定位质量(1~100)</string>
+    <string name="tv_relocate_quality_min_tips">导航过程中，当定位质量连续小于该值3次时，将会主动执行重定位操作。</string>
+    <string name="relocate_quality_empty_tips">定位质量不能为空…</string>
+    <string name="tv_relocate_quality_safe">重定位安全值：%1$d</string>
+    <string name="tv_relocate_quality_safe_tips">当导航重定位失败时，如果定位质量高于该值时，则认为安全，可以继续导航。</string>
+    <string name="tv_relocate_area_radius">重定位区域半径：%1$sM</string>
+    <string name="et_relocate_area_radius_hint">请输入重定位区域半径(单位:米)</string>
+    <string name="tv_relocate_area_radius_tips">当导航重定位时，以当前位置点为中心的区域内进行重定位，为0则全局重定位。</string>
+    <string name="relocate_area_radius_empty_tips">重定位区域半径不能为空…</string>
     <string name="tv_charge_start_distance">充电时对桩检测距离：%1$sM</string>
     <string name="et_charge_start_distance_hint">请输入检测距离(单位:米)</string>
-    <string name="charge_distance_empty_tips">检测距离不能为空，请输入…</string>
+    <string name="charge_distance_empty_tips">检测距离不能为空…</string>
     <string name="tv_charge_start_distance_tips">对桩检测距离是指激光雷达到桩的距离。如果在充电桩前0.2米开始检测对桩，底盘半径为0.25米，则检测距离为0.45米（如果值为0则不检测）。</string>
     <string name="tv_charge_offset">充电时对桩偏移值：%1$sM</string>
     <string name="et_charge_offset_hint">请输入对桩偏移值(单位:米)</string>
-    <string name="charge_offset_empty_tips">偏移值不能为空，请输入…</string>
+    <string name="charge_offset_empty_tips">偏移值不能为空…</string>
     <string name="tv_charge_offset_tips">当充电后退对桩时，如果大于设定的偏移值时，将会继续尝试，尝试一定次数后将停止，并返回充电失败的结果（如果值为0则不检测）。</string>
     <string name="btn_close_sensor">关闭传感器</string>
     <string name="all">全部</string>
     <string name="et_area_width_hint">请输入宽(单位:米)</string>
     <string name="et_area_height_hint">请输入高(单位:米)</string>
     <string name="tv_close_sensor_tips">以当前位置点设置传感器区域后，当导航经过该区域时，将会主动关闭指定的传感器。</string>
-    <string name="area_width_empty_tips">宽不能为空，请输入…</string>
-    <string name="area_height_empty_tips">高不能为空，请输入…</string>
-    <string name="relocation_global">全局重定位</string>
-    <string name="relocation_part">局部重定位</string>
-    <string name="tv_relocation_part_tips">请选择机器在地图实际位置的区域，如果选择的区域太小则不起作用，点击“停止”按钮可以取消当前操作。</string>
+    <string name="area_width_empty_tips">宽不能为空…</string>
+    <string name="area_height_empty_tips">高不能为空…</string>
+    <string name="relocate_global">全局重定位</string>
+    <string name="relocate_part">局部重定位</string>
+    <string name="tv_relocate_part_tips">请选择机器在地图实际位置的区域，如果选择的区域太小则不起作用，点击“停止”按钮可以取消当前操作。</string>
     <string name="tv_location_load_tips">是否加载上一次的位置点坐标？（请在地图位置未发生变化的前提下使用）</string>
-    <string name="low_battery_tips">电量不足，仅剩%1$d%%的电量，请及时充电！</string>
     <string name="btn_debug">debug</string>
     <string name="tv_sensor">传感器</string>
     <string name="tv_warn">警告</string>
@@ -305,9 +312,12 @@
     <string name="firmware_slam_module">slam模块</string>
     <string name="firmware_download">下载</string>
     <string name="et_download_url_hint_tips">请输入下载网址</string>
-    <string name="download_url_empty_tips">下载网址不能为空，请输入…</string>
+    <string name="download_url_empty_tips">下载网址不能为空…</string>
     <string name="url_invalid">网址无效…</string>
     <string name="file_exist_tips">该文件已存在…</string>
     <string name="downloading">下载中…</string>
     <string name="download_finish">下载完成…</string>
+    <string name="pixel_width">画笔宽度：%1$d</string>
+    <string name="tv_1">1</string>
+    <string name="tv_2">2</string>
 </resources>
