--- a/TobotApp/src/main/res/values-zh-rTW/strings.xml
+++ b/TobotApp/src/main/res/values-zh-rTW/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">瞳步建圖</string>
-    <string name="tv_chassis_connect_tips">請先連接到底盤連接的無線網絡</string>
     <string name="et_ip_hint_tips">請輸入底盤的ip地址</string>
+    <string name="tv_chassis_connect_tips">請先連接到底盤連接的無線網絡</string>
     <string name="btn_connect">連接</string>
     <string name="tv_connect_history">連接歷史記錄</string>
-    <string name="ip_empty_tips">ip地址不能為空，請輸入…</string>
-    <string name="tv_connect_ing">連接中…</string>
-    <string name="tv_reconnect_ing">重連中…</string>
+    <string name="ip_empty_tips">ip地址不能為空…</string>
+    <string name="connect_ing">連接中…</string>
+    <string name="reconnect_ing">重連中…</string>
     <string name="reconnect_success">重連成功…</string>
     <string name="tv_device_info">設備信息</string>
     <string name="tv_map_list">地圖列表</string>
@@ -15,7 +15,7 @@
     <string name="tv_about_app">關於APP</string>
     <string name="tv_set_speed">導航速度</string>
     <string name="tv_rotate_speed">旋轉角速度</string>
-    <string name="tv_current_rotate_speed_tips">最大旋轉角速度%.2fM/S</string>
+    <string name="tv_current_rotate_speed_tips">最大旋轉角速度%.1fM/S</string>
     <string name="tv_navigate_option">導航選項</string>
     <string name="navigate_mode">導航模式</string>
     <string name="navigate_free">自由導航</string>
@@ -37,10 +37,12 @@
     <string name="tv_contact_us">聯系我們</string>
     <string name="tv_robot">瞳步機器人</string>
     <string name="tv_scan_follow">掃碼關註微信公眾號</string>
-    <string name="tv_info">電話：13371936025\n郵箱：sales@tobotai.com\n網址：www.tobotai.com\n地址：上海市浦東新區納賢路800號A座9樓909</string>
+    <string name="tv_info">電話：13371936025\n郵箱：sales@tobotai.com\n網址：www.tobotai.com\n地址：上海市奉賢區金海公路6055號臨港南橋科技城29號樓506室</string>
     <string name="tv_task">任務</string>
     <string name="tv_navigate">導航</string>
-    <string name="tv_status_show">定位質量[%1$d]，充電狀態[%2$s]%3$s，電量[%4$d]，運動狀態[%5$s]</string>
+    <string name="tv_status_show">建圖狀態[%1$s]，定位質量[%2$d]，充電狀態[%3$s]%4$s，電量[%5$d]，運動狀態[%6$s]</string>
+    <string name="mapping_true">開</string>
+    <string name="mapping_false">關</string>
     <string name="tv_charge_true">充電中</string>
     <string name="tv_charge_false">未充電</string>
     <string name="charging_docking">-[在樁]</string>
@@ -54,9 +56,12 @@
     <string name="tv_save_map">保存地圖</string>
     <string name="tv_build_map">建圖</string>
     <string name="tv_virtual_wall">虛擬墻</string>
-    <string name="tv_virtual_track">虛擬軌道</string>
-    <string name="emergency_stop_tips">急停按鈕被按…</string>
-    <string name="break_stop_tips">剎車按鈕被按…</string>
+    <string name="tv_virtual_track">虛擬\n軌道</string>
+    <string name="emergency_stop_tips">急停按鈕被按</string>
+    <string name="break_stop_tips">剎車按鈕被按</string>
+    <string name="low_battery">低電</string>
+    <string name="motor_error">電機異常</string>
+    <string name="battery_communicate_error">電池通信異常</string>
     <string name="btn_add_current_point">添加當前位置點</string>
     <string name="btn_sort_point">按編號排序</string>
     <string name="btn_edit">編輯</string>
@@ -67,17 +72,17 @@
     <string name="navigate_result">導航結果：%1$b</string>
     <string name="rotate_result">旋轉結果：%1$b</string>
     <string name="move_recover_quality_low_tips">當前定位質量小於%1$d，無法正常導航，建議手動停止。請將機器移動至特征點明顯的地方進行重定位操作。</string>
-    <string name="relocation_map_fail">重定位失敗…</string>
+    <string name="relocate_fail">重定位失敗…</string>
     <string name="tv_map_switch_tips">確認要加載地圖嗎？加載後將會清除當前的地圖！</string>
     <string name="tv_map_delete_tips">確認要刪除該地圖嗎？</string>
     <string name="tv_location_delete_tips">確認要刪除該位置點嗎？</string>
     <string name="tv_clear_map_tips">確認要清除地圖嗎？</string>
     <string name="btn_confirm">確認</string>
-    <string name="set_ing_tips">設置中…</string>
-    <string name="set_success_tips">設置成功…</string>
-    <string name="set_fail_tips">設置失敗…</string>
-    <string name="name_empty_tips">位置點名稱不能為空，請輸入…</string>
-    <string name="map_name_empty_tips">地圖名稱不能為空，請輸入…</string>
+    <string name="set_ing">設置中…</string>
+    <string name="set_success">設置成功…</string>
+    <string name="set_fail">設置失敗…</string>
+    <string name="name_empty_tips">位置點名稱不能為空…</string>
+    <string name="map_name_empty_tips">地圖名稱不能為空…</string>
     <string name="tv_title_save_map">保存地圖</string>
     <string name="et_hint_map_tips">請輸入地圖名稱</string>
     <string name="et_hint_location_tips">請輸入位置點名稱</string>
@@ -87,21 +92,17 @@
     <string name="btn_update_location">更新點位置</string>
     <string name="tv_mark_location">標定點</string>
     <string name="tv_arrive_not_rotate">到點不旋轉</string>
-    <string name="et_relocation_area_width">重定位區域寬(單位:米)</string>
-    <string name="et_relocation_area_height">重定位區域高(單位:米)</string>
-    <string name="tv_relocation_area_tips">當重定位區域寬或高為0時，則默認局部重定位。</string>
+    <string name="et_relocate_area_width">重定位區域寬(單位:米)</string>
+    <string name="et_relocate_area_height">重定位區域高(單位:米)</string>
+    <string name="tv_relocate_area_tips">當重定位區域寬或高為0時，則默認局部重定位。</string>
     <string name="name_rule_tips">請按需求合理命名位置點名稱，建議以數字類型命名。</string>
     <string name="name_edit_rule_tips">位置點名稱、中英文名稱均可修改，但不能重復！重定位用於當前位置點執行定位操作。</string>
     <string name="map_rule_tips">請按需求合理命名地圖名稱，當保存的地圖名稱與現有地圖名稱壹致時，將會覆蓋保存。</string>
-    <string name="map_load_tips">地圖加載中…</string>
-    <string name="map_load_fail_tips">地圖加載失敗…</string>
-    <string name="map_load_success_tips">地圖加載成功…</string>
-    <string name="map_clear_tips">地圖清除中…</string>
-    <string name="clear_success_tips">清除成功…</string>
-    <string name="clear_fail_tips">清除失敗…</string>
-    <string name="map_save_tips">地圖保存中…</string>
-    <string name="map_save_success_tips">地圖保存成功…</string>
-    <string name="map_save_fail_tips">地圖保存失敗…</string>
+    <string name="load_ing">加載中…</string>
+    <string name="load_success">加載成功…</string>
+    <string name="load_fail">加載失敗…</string>
+    <string name="clear_fail">清除失敗…</string>
+    <string name="save_fail">保存失敗…</string>
     <string name="number_edit_fail_tips">該位置點名稱已存在，請重新命名…</string>
     <string name="name_china_edit_fail_tips">該中文名稱已存在，請重新命名…</string>
     <string name="name_english_edit_fail_tips">該英文名稱已存在，請重新命名…</string>
@@ -110,8 +111,8 @@
     <string name="version_latest">未檢測到新版本…</string>
     <string name="tv_upgrade_title">發現新版本</string>
     <string name="tv_upgrade_tips">檢測到新版本，是否更新？</string>
-    <string name="tv_check_version_tips">檢測中…</string>
-    <string name="download_fail_tips">下載失敗…</string>
+    <string name="check_ing">檢測中…</string>
+    <string name="download_fail">下載失敗…</string>
     <string name="permission_sd_card_open_tips">請先打開內存卡儲存權限…</string>
     <string name="tv_apk_download_begin">開始下載</string>
     <string name="tv_apk_download_tips">瞳步建圖下載中…</string>
@@ -137,10 +138,10 @@
     <string name="et_rotate_speed_hint_tips">請輸入旋轉角度值</string>
     <string name="tv_rotate_direction">旋轉方向</string>
     <string name="btn_send">發送</string>
-    <string name="rotate_speed_empty_tips">旋轉角度值不能為空</string>
+    <string name="rotate_speed_empty_tips">旋轉角度值不能為空…</string>
     <string name="tv_move_navigate_distance">向前導航</string>
     <string name="et_navigate_distance_hint_tips">請輸入導航距離（單位：米）</string>
-    <string name="navigate_distance_empty_tips">導航距離值不能為空</string>
+    <string name="navigate_distance_empty_tips">導航距離值不能為空…</string>
     <string name="tv_save_task">保存任務</string>
     <string name="et_hint_task_tips">請輸入任務名稱</string>
     <string name="tv_task_tips">任務名稱代表所創建任務的標誌，不能重復！</string>
@@ -157,11 +158,11 @@
     <string name="signal_2">較強</string>
     <string name="signal_3">壹般</string>
     <string name="slam_disconnect_tips">底盤連接斷開，請退出當前應用！(%1$s)</string>
-    <string name="operate_error_tips">操作失敗…</string>
+    <string name="operate_fail">操作失敗…</string>
     <string name="tv_reset_charge_title">重置充電樁</string>
     <string name="tv_reset_charge_tips">步驟如下\n1、將充電樁移至新的位置\n2、將機器導航或推到充電樁上並處於充電狀態\n3、點擊“重定位”，重定位成功後點擊“重置”\n4、將機器從充電樁導航出來，即重置成功</string>
     <string name="reset_not_charge_tips">請先將機器移動至充電樁上</string>
-    <string name="reset_fail_tips">重置失敗…</string>
+    <string name="reset_fail">重置失敗…</string>
     <string name="sensor_bumper_trigger">防碰撞傳感器觸發</string>
     <string name="sensor_cliff_trigger">防跌落(#%1$d)傳感器觸發</string>
     <string name="sensor_sonar">超聲波\n%1$s</string>
@@ -200,40 +201,39 @@
     <string name="tv_chassis_radius">底盤半徑：%1$sM</string>
     <string name="et_chassis_radius_hint">請輸入底盤半徑(單位:米)</string>
     <string name="tv_chassis_radius_tips">當重置充電樁時需要減去底盤半徑。</string>
-    <string name="chassis_radius_empty_tips">底盤半徑不能為空，請輸入…</string>
+    <string name="chassis_radius_empty_tips">底盤半徑不能為空…</string>
     <string name="btn_set">設置</string>
     <string name="tv_speed_multiplier">倍速（打開後速度翻倍）</string>
     <string name="tv_touch_count">觸摸次數：%1$d</string>
     <string name="et_touch_count_hint">請輸入觸摸次數</string>
-    <string name="touch_count_empty_tips">觸摸次數不能為空，請輸入…</string>
+    <string name="touch_count_empty_tips">觸摸次數不能為空…</string>
     <string name="set_success_and_reenter">設置成功，需重新進入應用…</string>
     <string name="tv_navigate_parameter">運行參數</string>
-    <string name="tv_relocation_quality_min">重定位最低定位質量：%1$d</string>
-    <string name="et_relocation_quality_hint">請輸入定位質量(1~100)</string>
-    <string name="tv_relocation_quality_min_tips">導航過程中，當定位質量連續小於該值3次時，將會主動執行重定位操作。</string>
-    <string name="relocation_quality_empty_tips">定位質量不能為空，請輸入…</string>
-    <string name="tv_relocation_quality_safe_tips">當導航重定位失敗時，如果定位質量高於該值時，則認為安全，可以繼續導航。</string>
-    <string name="tv_relocation_area_radius">重定位區域半徑：%1$sM</string>
-    <string name="et_relocation_area_radius_hint">請輸入重定位區域半徑(單位:米)</string>
-    <string name="tv_relocation_area_radius_tips">當導航重定位時，以當前位置點為中心的區域內進行重定位，為0則全局重定位。</string>
-    <string name="relocation_area_radius_empty_tips">重定位區域半徑不能為空，請輸入…</string>
+    <string name="tv_relocate_quality_min">重定位最低定位質量：%1$d</string>
+    <string name="et_relocate_quality_hint">請輸入定位質量(1~100)</string>
+    <string name="tv_relocate_quality_min_tips">導航過程中，當定位質量連續小於該值3次時，將會主動執行重定位操作。</string>
+    <string name="relocate_quality_empty_tips">定位質量不能為空…</string>
+    <string name="tv_relocate_quality_safe_tips">當導航重定位失敗時，如果定位質量高於該值時，則認為安全，可以繼續導航。</string>
+    <string name="tv_relocate_area_radius">重定位區域半徑：%1$sM</string>
+    <string name="et_relocate_area_radius_hint">請輸入重定位區域半徑(單位:米)</string>
+    <string name="tv_relocate_area_radius_tips">當導航重定位時，以當前位置點為中心的區域內進行重定位，為0則全局重定位。</string>
+    <string name="relocate_area_radius_empty_tips">重定位區域半徑不能為空…</string>
     <string name="tv_charge_start_distance">充電時對樁檢測距離：%1$sM</string>
     <string name="et_charge_start_distance_hint">請輸入檢測距離(單位:米)</string>
-    <string name="charge_distance_empty_tips">檢測距離不能為空，請輸入…</string>
+    <string name="charge_distance_empty_tips">檢測距離不能為空…</string>
     <string name="tv_charge_start_distance_tips">對樁檢測距離是指激光雷達到樁的距離。如果在充電樁前0.2米開始檢測對樁，底盤半徑為0.25米，則檢測距離為0.45米（如果值為0則不檢測）。</string>
     <string name="tv_charge_offset">充電時對樁偏移值：%1$sM</string>
     <string name="et_charge_offset_hint">請輸入對樁偏移值(單位:米)</string>
-    <string name="charge_offset_empty_tips">偏移值不能為空，請輸入…</string>
+    <string name="charge_offset_empty_tips">偏移值不能為空…</string>
     <string name="tv_charge_offset_tips">當充電後退對樁時，如果大於設定的偏移值時，將會繼續嘗試，嘗試一定次數後將停止，並返回充電失敗的結果（如果值為0則不檢測）。</string>
     <string name="btn_close_sensor">關閉傳感器</string>
     <string name="et_area_width_hint">請輸入寬(單位:米)</string>
     <string name="et_area_height_hint">請輸入高(單位:米)</string>
     <string name="tv_close_sensor_tips">以當前位置點設置傳感器區域後，當導航經過該區域時，將會主動關閉指定的傳感器。</string>
-    <string name="area_width_empty_tips">寬不能為空，請輸入…</string>
-    <string name="area_height_empty_tips">高不能為空，請輸入…</string>
-    <string name="tv_relocation_part_tips">請選擇機器在地圖實際位置的區域，如果選擇的區域太小則不起作用，點擊“停止”按鈕可以取消當前操作。</string>
+    <string name="area_width_empty_tips">寬不能為空…</string>
+    <string name="area_height_empty_tips">高不能為空…</string>
+    <string name="tv_relocate_part_tips">請選擇機器在地圖實際位置的區域，如果選擇的區域太小則不起作用，點擊“停止”按鈕可以取消當前操作。</string>
     <string name="tv_location_load_tips">是否加載上一次的位置點坐標？（請在地圖位置未發生變化的前提下使用）</string>
-    <string name="low_battery_tips">電量不足，僅剩%1$d%%的電量，請及時充電！</string>
     <string name="tv_sensor">傳感器</string>
     <string name="delete_all_tips">確認要全部刪除嗎？</string>
     <string name="tv_time">時間</string>
@@ -243,9 +243,10 @@
     <string name="firmware_slam_module">slam模塊</string>
     <string name="firmware_download">下載</string>
     <string name="et_download_url_hint_tips">請輸入下載網址</string>
-    <string name="download_url_empty_tips">下載網址不能為空，請輸入…</string>
+    <string name="download_url_empty_tips">下載網址不能為空…</string>
     <string name="url_invalid">網址無效…</string>
     <string name="file_exist_tips">該文件已存在…</string>
     <string name="downloading">下載中…</string>
     <string name="download_finish">下載完成…</string>
+    <string name="pixel_width">畫筆寬度：%1$d</string>
 </resources>
